fixed alignment of btn-circle

--- a/css/style.css
+++ b/css/style.css
@@ -113,7 +113,7 @@ p {
 .btn-circle {
   border-radius: 15px;
   width: 30px;
-  padding: 6px;
+  padding: 5px 6px;
   font-size: 18px;
 }
 
